<resources>
    <string name="app_name">MyBaseApplication</string>
    <string name="register_activity_title">RegisterActivity Title</string>
    <string name="register_success_message">Register Success Message!</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait...</string>
    <string name="error_missing_fields_message">Fill the required fields.</string>
    <string name="error_password_does_not_match">The password does not match to each other.</string>
    <string name="error_general_error">General error message</string>
    <string name="or">ou</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="login_activity_title">Login Screen Title</string>
    <string name="error_wrong_credentials_message">Email or passord not valid</string>
    <string name="error_login_required_fields">Password and Email must not be empty</string>
    <string name="name_hint">Name</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="register_hint">Register</string>
    <string name="pagamento_at_sight">At Sight</string>
    <string name="pagamento_divided">Divided</string>
    <string name="payment_status_not_paid">Not Paid</string>
    <string name="payment_status_partially_paid">Partially Paid</string>
    <string name="payment_status_paid">Paid</string>
    <string name="payment_status_all">All</string>
</resources>
