<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/coordinator_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ToolbarTheme"
                app:layout_scrollFlags="scroll|enterAlways"/>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/facebookLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp"/>

            <LinearLayout
                android:id="@+id/orView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_15"
                android:layout_marginRight="@dimen/margin_15"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_line"
                    android:layout_weight="2"
                    android:background="@color/grey_2000"/>

                <TextView
                    android:id="@+id/or"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/or"
                    android:textColor="@color/grey_2000"
                    android:textIsSelectable="false"
                    android:textSize="@dimen/caption"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/height_line"
                    android:layout_weight="2"
                    android:background="@color/grey_2000"/>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_15"
                    android:layout_marginRight="@dimen/margin_15"
                    android:layout_marginTop="@dimen/margin_15"
                    android:hint="@string/name_hint"
                    android:textSize="@dimen/body"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_15"
                    android:layout_marginRight="@dimen/margin_15"
                    android:layout_marginTop="@dimen/margin_5"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/body"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_15"
                    android:layout_marginRight="@dimen/margin_15"
                    android:layout_marginTop="@dimen/margin_5"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:fontFamily="sans-serif"
                    android:textSize="@dimen/body"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_15"
                    android:layout_marginRight="@dimen/margin_15"
                    android:layout_marginTop="@dimen/margin_5"
                    android:hint="@string/confirm_password_hint"
                    android:fontFamily="sans-serif"
                    android:inputType="textPassword"
                    android:textSize="@dimen/body"
                    />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_15"
                android:layout_marginRight="@dimen/margin_15"
                android:layout_marginTop="@dimen/margin_24"
                android:background="@drawable/rounded_background"
                android:gravity="center_horizontal"
                android:padding="@dimen/margin_8"
                android:text="@string/register_hint"
                android:textColor="@color/white"
                android:textSize="@dimen/button_3"/>

        </LinearLayout>
    </FrameLayout>
</android.support.design.widget.CoordinatorLayout>